# gkNextEngine

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.en.md  README.md  build.bat  build.sh  build_windows.bat  deploy_android.bat  package.bat  run.bat  run.sh  vcpkg-configuration.json  vcpkg-configuration.json__  vcpkg.bat  vcpkg.json  vcpkg.json__  vcpkg.sh  vcpkg_android.bat  vcpkg_android.sh  vcpkg_linux.sh  vcpkg_macos.sh  vcpkg_mingw.sh  vcpkg_windows.bat
.github/workflows/: android.yml  linux.yml  macos.yml  readme.yml  release.yml  release_magicalego.yml  windows.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/helloworld/: HelloWorldActivity.java
android/app/src/main/res/values/: styles.xml
assets/: CMakeLists.txt
assets/shaders/: Bake.HwAmbientCube.comp.slang  Bake.SwAmbientCube.comp.slang  Bindless.slang  Common.slang  Core.HwTracing.comp.slang  Core.PathTracing.comp.slang  Core.SwModern.comp.slang  Core.SwModernOld.comp.slang  Core.SwTracing.comp.slang  Core.VoxelTracing.comp.slang  Process.DenoiseJBF.comp.slang  Process.ReProject.comp.slang  Process.UpScaleFSR.comp.slang  Rast.VisibilityPass.vert.slang  Rast.Wireframe.frag.slang  Rast.Wireframe.vert.slang  Task.GpuCull.comp.slang  Task.RayCast.comp.slang  Util.BufferClear.comp.slang  Util.VisualDebugger.comp.slang
assets/shaders/common/: AmbientCube.slang  BasicTypes.slang  BindlessTexture.slang  Const_Func.slang  GPUScene.slang  GeneralFunc.slang  PreProcessor.slang  ShaderClock.slang  Shading.slang
ios/: Info.plist
src/: AndroidMain.cpp  CMakeLists.txt  DesktopMain.cpp  Options.cpp  Options.hpp
src/Application/MagicaLego/: MagicaLegoGameInstance.cpp  MagicaLegoGameInstance.hpp  MagicaLegoUserInterface.cpp
src/Application/Packager/: PackagerMain.cpp
src/Application/gkNextBenchmark/Common/: BenchMark.cpp
src/Application/gkNextBenchmark/gkNextMotionBenchmark/: gkNextMotionBenchmark.cpp
src/Application/gkNextRenderer/: gkNextRenderer.cpp  gkNextRenderer.hpp
src/Assets/: Animation.cpp  CPUAccelerationStructure.cpp  CPUAccelerationStructure.h  CornellBox.cpp  FProcModel.cpp  FProcModel.h  FSceneLoader.cpp  FSceneLoader.h  Material.hpp  Model.cpp  Model.hpp  Node.cpp  Node.h  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  TextureImage.cpp  UniformBuffer.cpp  UniformBuffer.hpp
src/Common/: CoreMinimal.hpp
src/Editor/: EditorContentBrowser.cpp  EditorInterface.cpp  EditorMain.cpp  EditorMain.h  EditorMaterialEd.cpp  EditorMenubar.cpp  EditorOutliner.cpp  EditorProperties.cpp  EditorUtils.cpp  EditorViewport.cpp
src/Rendering/: RayTraceBaseRenderer.cpp  RayTraceBaseRenderer.hpp  VulkanBaseRenderer.cpp  VulkanBaseRenderer.hpp
src/Rendering/HardwareTracing/: HardwareTracingPipeline.cpp  HardwareTracingPipeline.hpp  HardwareTracingRenderer.cpp
src/Rendering/PathTracing/: PathTracingPipeline.cpp  PathTracingPipeline.hpp  PathTracingRenderer.cpp  PathTracingRenderer.hpp
src/Rendering/PipelineCommon/: CommonComputePipeline.cpp  CommonComputePipeline.hpp
src/Rendering/SoftwareModern/: SoftwareModernPipeline.cpp  SoftwareModernPipeline.hpp  SoftwareModernRenderer.cpp  SoftwareModernRenderer.hpp
src/Rendering/SoftwareTracing/: SoftwareTracingPipeline.cpp  SoftwareTracingPipeline.hpp  SoftwareTracingRenderer.cpp  SoftwareTracingRenderer.hpp
src/Runtime/: Engine.cpp  Engine.hpp  ModelViewController.cpp  ModelViewController.hpp  NextAnimation.cpp  NextPhysics.cpp  NextPhysics.h  SceneList.cpp  ScreenShot.cpp  TaskCoordinator.cpp  TaskCoordinator.hpp  UserInterface.cpp  UserInterface.hpp  UserSettings.hpp
src/Runtime/Platform/: PlatformAndroid.h  PlatformLinux.h
src/Utilities/: Exception.cpp  Exception.hpp  FileHelper.cpp  FileHelper.hpp
src/Vulkan/: DebugUtils.hpp  DebugUtilsMessenger.cpp  DescriptorSetLayout.cpp  DescriptorSets.cpp  DescriptorSets.hpp  Device.cpp  DeviceMemory.cpp  Image.cpp  ImageMemoryBarrier.hpp  Instance.cpp  PipelineBase.hpp  PipelineLayout.cpp  PipelineLayout.hpp  ShaderModule.cpp  Surface.cpp  SwapChain.cpp  Vulkan.hpp  VulkanGpuTimer.hpp  Window.cpp  Window.hpp
src/Vulkan/RayTracing/: AccelerationStructure.cpp  BottomLevelAccelerationStructure.cpp  DeviceProcedures.cpp  TopLevelAccelerationStructure.cpp  TopLevelAccelerationStructure.hpp
tools/: fetch_moltenvk.sh  fetch_slang_linux.sh  prepare.sh
tools/clang-tools/: run-naming.sh
